--- a/Models/-SVC/2021.05.28_DiffSVC.md
+++ b/Models/-SVC/2021.05.28_DiffSVC.md
@@ -350,3 +350,143 @@ We summarize the training procedure of the conversion model in DiffSVC in Algori
 \end{algorithmic}
 
 \end{algorithm}
+
+## 5·Experiments
+
+\label{sec5}
+
+We evaluate the proposed DiffSVC by conducting any-to-one SVC tasks, where  the singing voice of an arbitrary source singer is converted to the target singer's.
+
+In this section, we first introduce the corpus for the experiments and the data pre-processing methods.
+
+Then the implementation details of both the baseline approaches and proposed approach are presented.
+
+Finally, we present the evaluation results.
+
+### Dataset and preprocessing
+
+\label{data_prep}
+
+The PPG extractor is trained using an internal Mandarin Chinese ASR corpus, which contains around 20k hours speech data recorded by thousands of speakers.
+
+The PPG features have dimensionality of 218.
+
+The conversion model in DiffSVC is trained with an internal dataset, which contains 14 hours singing data recorded by a female voice talent.
+
+The audio format is 16-bit PCM with a sample rate of 24 kHz.
+
+Mel spectrograms have 80 frequency bins, and are computed with 1024-point fast Fourier transform (FFT), 1024-point window size and 240-point hop size (i.e., 10 ms).
+
+Mel spectrograms are min-max normalized to the range [-1, 1].
+
+Fundamental frequency (F0) values are computed with hop size of 240.
+
+To make the F0 computation robust, we use three F0 estimators, i.e., DIO [^Morise2009Fast], REAPER \footnote{[Online] \url{https://github.com/google/REAPER}} and SPTK [^Tokuda2009Speech].
+
+The F0 values take the median results by this three F0 estimators.
+
+The FFT size, window size and hop size for computing loudness features are 2048, 2048 and 240, respectively.
+
+### Implementation details
+
+\label{implementation}
+
+The output size of the PPG prenet, the melody embedding size and loudness embedding size are all 256.
+
+The number of bins for quantizing Log-F0 and loudness is 256.
+
+The step encoder has the same hyper-parameter setting as in [^Kong2020Diffwave].
+
+We use 20 residual layers in a diffusion decoder, where the number of convolution channels are 256.
+
+The total number of diffusion steps is 100 (i.e., T = 100).
+
+The noise schedule $\beta$'s are set to linearly spaced from $1\times 10^{-4}$ to 0.06.
+
+We train models with the ADAM optimizer [^Kingma2015Adam] with a constant learning rate of $0.0002$.
+
+We train a Hifi-GAN model [^Kong2020HiFi-Gan] as vocoder to convert mel spectrograms to the raw waveform.
+
+The official implementation\footnote{[Online] \url{https://github.com/jik876/hifi-gan}} (the "config\_v1.json'' configuration) is used with a slight change.
+
+Since we use 24 kHz audio samples and the hop-size for computing mel spectrogram is 240, we factorize the upsample rate as $240=8\times5\times3\times2$.
+
+To avoid possible checkerboard artifacts caused by the "ConvTranspose1d" upsampling layer, we use temporal nearest interpolation layer followed by a one-dimensional convolutional layer as the upsampling operation, as suggested in [^Odena2016Deconvolution].
+
+The kernel sizes we use are [15,15,5,5].
+
+### Comparisons
+
+We compare the proposed DiffSVC system with three state-of-the-art SVC approaches.
+
+To make the comparison fair, all models use the same DFSMN-based PPG extractor (as introduced in Section~[sec4](#sec4)) to compute PPG features as the content representations.
+
+Fundamental frequency ($f_0$) values are computed using the robust ensemble method introduced in Section~[data_prep](#data_prep).
+
+The details of their implementations are presented as follows.  \\
+**BLSTM-SVC**
+
+This model is proposed by [^Chen2019Singing].
+
+We make slight modifications to make the comparison fair: (1) We use mel spectrogram and Log-F0 as the acoustic features instead of the conventional vocoder parameters such as mel cepstral (MCEP) features and aperiodicity (AP) features; and (2) we use the Hifi-GAN vocoder introduced in Section~[implementation](#implementation) for high-fidelity waveform generation.
+
+We reimplemented the 512N model in [^Chen2019Singing] since it shows better conversion performance according to the experimental results in the orginal paper.  \\
+**Seq2seq-SVC**
+
+This model is proposed by [^Li2021PPG-Based], where a sequence-to-sequence (seq2seq) based model using GMM-based attention mechanism is trained to predict mel spectrograms from PPGs.
+
+Slight modifications are also made to make the comparison fair: (1) we do not use the Mel encoder and the singer confusion module because we focus on single-speaker conversion model; (2) we use the Hifi-GAN vocoder introduced in Section~[implementation](#implementation) for converting mel spectrograms into waveform, instead of using a WaveRNN vocoder[^Kalchbrenner2018Efficient]. \\
+**FastSVC**
+
+This model is presented in [^Liu2021FastSVC], which uses a generator in a GAN model to convert content features directly into waveform, and is trained by combining a multi-scale spectral loss and an adversarial loss.
+
+In the original paper, the content features used by the authors have a hop-size of 320, while the PPGs used in this paper have a hop-size of 240.
+
+Therefore, we change the upsampling rates of the generator to [5,4,4,3] from the original [4,4,4,5].
+
+To further adapt FastSVC for 24 kHz audio synthesizing (originally, FastSVC works on 16 kHz audio), we add the multi-period discriminator (MPD) [^Kong2020HiFi-Gan] as additional discriminator.
+
+These changes make FastSVC achieving better conversion performance on 24 kHz audio samples.
+
+### Evaluations
+
+Subjective evaluations in terms of both the naturalness and voice similarity of converted speech are conducted.
+
+We use the 5 point Likert scale for testing with mean opinion score (MOS) (1-bad, 2-poor, 3-fair, 4-good, 5-excellent).
+
+In the MOS tests for evaluating naturalness, each group of stimuli contains recording samples from the target singer, which are randomly shuffled with the samples generated by the four comparative approaches, before they are presented to raters.
+
+In the MOS similarity tests, converted speech samples are directly compared with the recording samples of the target singer. 
+10 utterances from an evaluation set are presented for each system. 
+We invited raters to participate in the evaluations in a quiet room and they were asked to use headphones during the tests.
+
+The raters were allowed to replay each sample as many times as necessary and change their ratings of any sample before submitting their results.
+
+The MOS results are demonstrated in Table~[tab:1](#tab:1).
+
+We can see that DiffSVC achieves significantly better performance than the other three compared systems (i.e., BLSTM-SVC, Seq2seq-SVC and FastSVC), in terms of  both naturalness and voice similarity.
+
+Audio samples can be found online\footnote{[Online] \url{https://liusongxiang.github.io/diffsvc/}}.
+
+<a id="tab:1">Subjective and objective evaluation results. "Nat." is for "Naturalness" and "Sim." is for "Voice Similarity", repectively.
+
+Up arrows mean "higher the better".
+
+Down arrows mean "lower the better".</a>
+
+We use mel-cepstrum distortion (MCD) and F0 Pearson correlation (FPC) as metrics for objective evaluations.
+
+We extract the mel-cepstrum of the generated audio samples and the ground-truth audio samples from the target singer for MCD evaluation.
+
+For the FPC evaluation, we extract the F0 from  the generated audio samples and the recordings from the source singer, since our goal is to convert the voice of a singing signal to the target singer's voice without changing the underlying content and melody.
+
+The DTW algorithm is adopted to align the predicted acoustic features towards the natural ones.  
+The objective results are presented in Table~[tab:1](#tab:1).
+
+We can see that, among the four compared systems, DiffSVC achieves the best MCD result (6.307).
+
+In terms of FPC, the FastSVC system achieves the best result (0.904).
+
+DiffSVC achieves slightly lower FPC result than FastSVC, with an FPC value of 0.902 and an 0.2\% relative drop.
+
+Combining the experimental results, we can safely say that DiffSVC achieves superior singing voice conversion performance than previous SVC approaches in terms of naturalness and voice similarity of the converted signal.
