--- a/Models/-SVC/2021.05.28_DiffSVC.md
+++ b/Models/-SVC/2021.05.28_DiffSVC.md
@@ -511,3 +511,35 @@ Investigation on training a DiffSVC model under low-data-resource scenario is al
 \bibliography{strings,refs}
 
 \end{document}
+
+## References
+
+[^Nachmani2019Unsupervised]: Unsupervised Singing Voice Conversion. Interspeech 2019.
+[^Deng2020Pitchnet]: Pitchnet: Unsupervised Singing Voice Conversion With Pitch Adversarial Network. Icassp 2020.
+[^Polyak2020Unsupervised]: Unsupervised Cross-Domain Singing Voice Conversion. Interspeech 2020.
+[^Liu2021FastSVC]: FastSVC: Fast Cross-Domain Singing Voice Conversion With Feature-Wise Linear Modulation. Icme 2021.
+[^Li2021PPG-Based]: PPG-Based Singing Voice Conversion With Adversarial Representation Learning. ICASSP 2021 - 2021 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2021.
+[^Sohl-Dickstein2015Deep]: Deep Unsupervised Learning Using Nonequilibrium Thermodynamics. International Conference on Machine Learning 2015.
+[^Ho2020Denoising]: Denoising Diffusion Probabilistic Models. Advances in Neural Information Processing Systems 2020.
+[^Song2021Denoising]: Denoising Diffusion Implicit Models. International Conference on Learning Representations 2021.
+[^Kong2020Diffwave]: Diffwave: A Versatile Diffusion Model for Audio Synthesis. arXiv:2009.09761.
+[^Chen2020WaveGrad]: WaveGrad: Estimating Gradients for Waveform Generation. arXiv:2009.00713.
+[^Toda2007One-to-Many]: One-to-Many and Many-to-One Voice Conversion Based on Eigenvoices. Icassp 2007.
+[^Kobayashi2014Statistical]: Statistical Singing Voice Conversion With Direct Waveform Modification Based on the Spectrum Differential. Interspeech 2014.
+[^Kobayashi2015Statistical]: Statistical Singing Voice Conversion Based on Direct Waveform Modification With Global Variance. Interspeech 2015.
+[^Sisman2019Singan]: SINGAN: Singing Voice Conversion With Generative Adversarial Networks. Apsipa Asc) 2019.
+[^Oord2016Wavenet]: Wavenet: A Generative Model for Raw Audio. Isca SSW 2016.
+[^Luo2020Singing]: Singing Voice Conversion With Disentangled Representations of Singer and Vocal Technique Using Variational Autoencoders. Icassp 2020.
+[^Lu2020Vaw-Gan]: VAW-GAN for Singing Voice Conversion With Non-Parallel Training Data. 2020 Asia-Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC) 2020.
+[^Hyv{{\"a}}rinen2005Estimation]: Estimation of Non-Normalized Statistical Models by Score Matching. Journal of Machine Learning Research 2005.
+[^Song2019Generative]: Generative Modeling by Estimating Gradients of the Data Distribution. Advances in Neural Information Processing Systems 2019.
+[^Song2021Score-Based]: Score-Based Generative Modeling Through Stochastic Differential Equations. International Conference on Learning Representations 2021.
+[^Zhang2018Deep-FSMN]: Deep-FSMN for Large Vocabulary Continuous Speech Recognition. 2018 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP) 2018.
+[^Ramachandran2017Searching]: Searching for Activation Functions. arXiv:1710.05941.
+[^Morise2009Fast]: Fast and Reliable F0 Estimation Method Based on the Period Extraction of Vocal Fold Vibration of Singing Voice and Speech. Audio Engineering Society Conference: 35th International Conference: Audio for Games 2009.
+[^Tokuda2009Speech]: Speech Signal Processing Toolkit (SPTK). http://sp-tk.sourceforge.net 2009.
+[^Kingma2015Adam]: Adam: A Method for Stochastic Optimization. Iclr 2015.
+[^Kong2020HiFi-GAN]: HiFi-GAN: Generative Adversarial Networks for Efficient and High Fidelity Speech Synthesis. Advances in Neural Information Processing Systems 2020.
+[^Odena2016Deconvolution]: Deconvolution and Checkerboard Artifacts. Distill 2016.
+[^Chen2019Singing]: Singing Voice Conversion With Non-Parallel Data. 2019 IEEE Conference on Multimedia Information Processing and Retrieval (MIPR) 2019.
+[^Kalchbrenner2018Efficient]: Efficient Neural Audio Synthesis. International Conference on Machine Learning 2018.
