--- a/Models/-SVC/2024.02.20_SingVisio.md
+++ b/Models/-SVC/2024.02.20_SingVisio.md
@@ -23,3 +23,15 @@
   - [Publication] #TODO
 
 </details>
+
+## Abstract
+
+In this study, we present SingVisio, an interactive visual analysis system that aims to explain the diffusion model used in singing voice conversion.
+SingVisio provides a visual display of the generation process in diffusion models, showcasing the step-by-step denoising of the noisy spectrum and its transformation into a clean spectrum that captures the desired singer's timbre.
+The system also facilitates side-by-side comparisons of different conditions, such as source content, melody, and target timbre, highlighting the impact of these conditions on the diffusion generation process and resulting conversions.
+Through comparative and comprehensive evaluations, SingVisio demonstrates its effectiveness in terms of system design, functionality, explainability, and user-friendliness.
+It offers users of various backgrounds valuable learning experiences and insights into the diffusion model for singing voice conversion.
+
+\begin{keyword}
+Machine Learning, Explainable AI, Visual Analytics, Audio Processing
+\end{keyword}
