--- a/Models/-SVC/2024.02.20_SingVisio.md
+++ b/Models/-SVC/2024.02.20_SingVisio.md
@@ -267,3 +267,118 @@ To objectively evaluate synthesized samples, we adopt the evaluation methodology
 This includes metrics such as **Singer Similarity (Dembed) with Resemblyzer~\footnote{\url{https://github.com/resemble-ai/Resemblyzer**}}, **F0 Pearson Correlation Coefficient (F0CORR)**, **Fréchet Audio Distance (FAD)**, **F0 Root Mean Square Error (F0RMSE)**,  and **Mel-cepstral Distortion (MCD)**.
 
 Detailed definitions of these metrics are provided in ~[app:metircs](#app:metircs).
+
+## 4·Design Requirements
+
+### Requirement analysis
+
+Through a series of interviews with experts in audio signal processing and machine learning, we identified three critical tasks that our system needs to support for effective analysis and interpretation of the diffusion model for SVC.
+
+**C1: In-Depth Temporal Dynamics Analysis of Diffusion Generation Process.**
+
+Experts highlighted the importance of visualizing the temporal dynamics of the diffusion generation process in singing voice conversion.
+
+The objective is to create detailed visual representations that effectively trace the step-by-step evolution occurring in voice conversion at each diffusion stage.
+
+This involves visualizing the progression of various acoustic parameters, such as frequency components and harmonics that evolve over time.
+
+The visualizations are expected to provide users with an intuitive understanding of the voice transformation, highlighting the nuanced evolution from a noisy beginning to a structured and coherent output, thereby making the process more transparent and understandable to users without deep technical expertise in machine learning or signal processing.
+
+**C2: Comprehensive Performance Metrics Evaluation in Singing Voice Synthesis.**
+
+This task is centered on tracking evaluation metrics that gauge the quality of the converted voice at each step of the diffusion generation process.
+
+These metrics include pitch accuracy, timbre consistency, naturalness, and speech quality.
+
+The system should enable a detailed analysis of how each metric evolves with every diffusion step, offering insights into the conversion quality at different phases of the generation process.
+
+This comprehensive evaluation is pivotal in identifying aspects where the conversion achieves optimal quality or, conversely, where improvements are needed.
+
+This visual representation enhances the interpretability of the evaluation results and fosters insights into the underlying dynamics of the diffusion generation process.
+
+**C3: Comparative Analysis of Different Source Singers, Songs, and Target Singers.**
+
+Through visualization, we aim to systematically compare how different characteristics of source singers, such as vocal tone, pitch range, and singing style, influence the conversion outcome.
+
+This will help in identifying specific attributes of source singers that are more amenable to conversion.
+
+Additionally, the complexity and structure of the song itself are crucial variables.
+
+Songs with intricate melodic lines or complex rhythms might pose more significant challenges in conversion processes.
+
+Equally important is the analysis of the target singers' characteristics.
+
+The system should visualize how well the model adapts the source singer's voice to match the timbre of the target singers.
+
+This could lead to valuable insights, such as identifying particularly challenging source-target pairings or songs that consistently yield high-quality conversions.
+
+Such analysis is not only crucial for understanding the current model's performance but also for guiding future improvements and applications in singing voice conversion technology.
+
+C1 and C2 tasks are related to fundamental knowledge of the diffusion model, which is crucial and beneficial for beginners to understand diffusion models.
+
+In contrast, C3 task focuses on exploring the impacts of different conditions on SVC, which is more suitable for experts or researchers seeking an in-depth understanding and analysis of diffusion-based SVC.
+
+Accordingly, we design SingVisio in two versions: a basic version and an advanced version.
+
+Both versions include C1 and C2 tasks.
+
+Additionally, the advanced version encompasses C3 task, catering to the needs of experts and researchers.
+
+![](figs/explainer_system_notes.pdf)
+
+<a id="fig:explainer_system">%\jun{Display this figure in a teaser mode or move it into Section 5.} 
+Visual system for diffusion-based singing voice conversion.
+
+The system consists of five views. 
+(A) ***Metric View*** shows objective evaluation results on the singing voice conversion model, allowing users to interactively explore the performance trend along diffusion steps. (B) ***Projection View*** aids users in tracking the data patterns of diffusion steps in the embedding space under different input conditions. (C) ***Step View*** provides users with the visualization of Mel spectrogram and pitch contour at one diffusion step. (D) ***Comparison View*** facilitates users to compare voice conversion results among different diffusion steps or singers. (E) ***Control Panel*** enables users to select various comparison modes and choose different source and target singers to visually understand and analyze the model behavior.
+
+The red annotations provide explanations for the patterns or components. 
+% \lmxue{upate figure and caption}
+\vspace{-19pt}</a>
+
+### Analytical Tasks
+
+\label{sec:analytical-tasks}
+
+Our system is a visualization system designed specifically for diffusion-based SVC tasks.
+
+Diffusion-based SVC itself involves two aspects: in the realm of machine learning, it involves the diffusion generative model, and in the field of audio signal processing, it pertains to SVC.
+
+Therefore, the analytical tasks supported by our system can be divided into two major categories.
+
+In the aspect of machine learning, particularly in the diffusion model, to investigate the evolution and quality of the generated result from each step in the diffusion generation process, our system should support the following two tasks.
+
+**T1: Step-wise Diffusion Generation Comparison.**
+
+Examining the generated result of each step in the diffusion generation process helps in understanding the model's behavior.
+
+Analyzing these early outputs can help us understand how the model initially handles noise.
+
+As each step incrementally adds detail and structure to the output, by inspecting intermediate steps, we can observe the step-by-step improvement in content quality. (C1)
+
+**T2: Step-wise Metric Comparison.**
+
+As the diffusion steps progress, the generated content becomes clearer and more refined.
+
+Analyzing the objective evaluation metrics and their corresponding curves along the diffusion steps serves as a useful tool for assessing both the quantitative and qualitative aspects of the generated content.
+
+By tracking these metrics over the diffusion steps, we gain insights into how the model refines its output over time. (C2)
+
+Regarding SVC, as described in Section~[sec:background](#sec:background), there are three factors (content, melody, singer timbre) that have a direct impact on the results of SVC and, therefore, should be considered during the conversion process.
+
+To explore the impact of different factors on the converted results, the system needs to provide support for the following three tasks.
+
+**T3: Pair-wise SVC Comparison with Different \uline{Target Singers**.}  
+Pair-wisely comparing SVC under two different conditions of the target singer at different diffusion steps.
+
+This task helps us to understand the impact of the timbre of the target singer that should be converted to the converted results of SVC, particularly in terms of singer similarity. (C1, C3)
+
+**T4:  Pair-wise SVC Comparison with Different \uline{Source Singers**.}  
+Pair-wisely comparing SVC under two different conditions of source singer at different diffusion steps.
+
+This task benefits us in exploring the impact of the melody of the source that should be kept on the converted results of SVC, particularly in terms of F0CORR, F0RMSE. (C1, C3)
+
+**T5: Pair-wise SVC Comparison with Different \uline{Songs**.}  
+Pair-wisely comparing SVC under two different conditions of the song at different diffusion steps.
+
+This task facilitates us to explore the impact of the content information conveyed in the song that should be maintained on the converted results of SVC, particularly in terms of MCD. (C1, C3)
